# course-assignment-DanielHalachev

./: .gitignore  README.md
HomeworkTasks/: README.md
HomeworkTasks/11 Shading 03/Slides/: p.avi
Images/: README.md
Images/HW03/: tracer2-400x300.ppm  tracer400x300.ppm
Images/HW05/: scene3.txt  scene4.txt
Images/HW06/: scene1.txt
Images/HW11/GI/: README.md
Images/HW13/: README.md
Images/HW14/: README.md
Images/HW15/: README.md
SourceCode/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  ppmToPng.sh
SourceCode/app/: CMakeLists.txt  animation.cpp  main.cpp
SourceCode/cmake/: FindRapidJSON.cmake  FindSTB.cmake
SourceCode/include/threadpool/: ThreadManager.h
SourceCode/include/tracer/: BoundingBox.h  Camera.h  Color.h  Material.h  Matrix.h  Ray.h  RayTracer.h  Scene.h  SceneParser.h  Texture.h  Triangle.h  Utils.h  Vector.h  Vertex.h
SourceCode/include/tree/: AccelerationStructure.h  KDTree.h
SourceCode/src/: AccelerationStructure.cpp  CMakeLists.txt  Camera.cpp  Color.cpp  KDTree.cpp  Material.cpp  Ray.cpp  RayTracer.cpp  Scene.cpp  SceneParser.cpp  Texture.cpp  Triangle.cpp  Utils.cpp  Vector.cpp  Vertex.cpp
